deploy/k8s/06-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maito-monolith
  namespace: maito-prod
  labels:
    app.kubernetes.io/name: maito-monolith
    app.kubernetes.io/component: backend-monolith
    app.kubernetes.io/part-of: maito-platform
    app.kubernetes.io/version: "15.0.0"
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: maito-monolith
      app.kubernetes.io/component: backend-monolith
  template:
    metadata:
      labels:
        app.kubernetes.io/name: maito-monolith
        app.kubernetes.io/component: backend-monolith
        app.kubernetes.io/part-of: maito-platform
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      securityContext:
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: maito-monolith
          image: maito-registry.io/maito-backend-monolith:v15.0.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
