deploy/k8s/03-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: maito-prod
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/part-of: maito-platform
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      name: postgresql
  selector:
    app.kubernetes.io/name: postgresql
