deploy/k8s/04-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: maito-prod
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: maito-platform
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app.kubernetes.io/name: redis
