deploy/k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maito-monolith-ingress
  namespace: maito-prod
  labels:
    app.kubernetes.io/name: maito-monolith
    app.kubernetes.io/part-of: maito-platform
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "maito.io"
        - "*.maito.io"
      secretName: maito-wildcard-tls
  rules:
    - host: "maito.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maito-monolith
                port:
                  number: 8080
    - host: "*.maito.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maito-monolith
                port:
                  number: 8080
